--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </td>
 
 <td>
-<img src="Stephen.jpg" height="300px" width="350px"alt="image can't be loaded"> 
+<img src="index.jpg" height="300px" width="350px"alt="image can't be loaded"> 
 <p><small>This table proves that he is the best player in NBA</small><span style="color:blue"></span></p> 
 <h3><b>3 pointer</b></h3> 
 <table border=3>
